@@ -6,3 +6,4 @@
 .arch-inventory
 {arch}
 CHANGELOG
+bzr-test.log
